src/es/components/organisms/header/default-/default-.css
:host {
  --header-default-a-color-hover: var(--color-secondary);
  --header-default-a-color: var(--color);
  --header-default-a-font-size: var(--h4-font-size);
  --header-default-a-line-height: 2rem;
  --header-default-a-logo-top: calc(62px / 2 - 90px / 2); /* gets calculated by adjustLogoPos but preset here for desktop with these values: "calc(${navHeight}px / 2 - ${logoHeight}px / 2)" to avoid visible adjustment at load */
  --header-default-a-margin-mobile: 0 5% 0 0;
  --header-default-a-margin: 0 max(4.5625rem, 3vw) 0 0;
  --header-default-a-menu-icon-align-self-mobile: baseline;
  --header-default-a-menu-icon-background-color: var(--header-default-a-menu-icon-background-color-custom, var(--background-color));
  --header-default-a-menu-icon-border-radius: 25%;
  --header-default-a-menu-icon-height-open-mobile: var(--header-default-a-menu-icon-height);
  --header-default-a-menu-icon-height: 3px;
  --header-default-a-menu-icon-margin: 0;
  --header-default-a-menu-icon-one-transform: rotate(-45deg) translateY(0.87em);
  --header-default-a-menu-icon-padding-open: var(--header-default-a-menu-icon-padding);
  --header-default-a-menu-icon-padding: 1.7rem var(--content-spacing-mobile, var(--content-spacing)) 1.2rem;
  --header-default-a-menu-icon-spacing: 6px;
  --header-default-a-menu-icon-two-transform: rotate(45deg) translateY(-0.87em);
  --header-default-a-menu-icon-width-open-mobile: var(--header-default-a-menu-icon-width);
  --header-default-a-menu-icon-width: 28px;
  --header-default-a-padding-mobile: 1.5rem 0 1.4rem 0;
  --header-default-a-padding: 0 0 1.5rem 0;
  --header-default-a-text-decoration-hover: none;
  --header-default-a-text-decoration: none;
  --header-default-a-text-transform: none;
  --header-default-a-white-space: nowrap;
  --header-default-align-items: end;
  --header-default-background-color: var(--color-secondary);
  --header-default-border-bottom: 1px solid var(--m-gray-300);
  --header-default-box-sizing-open-mobile: border-box;
  --header-default-content-width-mobile: 100%;
  --header-default-flex-wrap: wrap;
  --header-default-height-mobile: 5rem;
  --header-default-height: auto;
  --header-default-justify-content-mobile: space-between;
  --header-default-justify-content: center;
  --header-default-left-open-mobile: 0;
  --header-default-logo-width: 90px;
  --header-default-m-navigation-background-color-mobile: var(--background-color);
  --header-default-m-navigation-height-mobile: calc(100vh - var(--header-default-m-navigation-top-mobile));
  --header-default-m-navigation-height-open-mobile: var(--header-default-m-navigation-height-mobile);
  --header-default-m-navigation-top-mobile: var(--header-default-height-mobile);
  --header-default-m-navigation-transition: none;
  --header-default-margin-mobile: var(--content-spacing-mobile) auto;
  --header-default-margin: var(--content-spacing) auto;
  --header-default-order: 0;
  --header-default-position-open-mobile: fixed;
  --header-default-position: static;
  --header-default-sticky-border-bottom: var(--header-default-border-bottom);
  --header-default-top-open-mobile: 0;
  --header-default-width-open-mobile: 100%;
  --logo-default-height-mobile: var(--logo-default-height);
  --logo-default-height: auto;
  --logo-default-width-mobile: var(--logo-default-width);
  --logo-default-width: var(--header-default-logo-width);
}

